# EpiLib

./: .gitignore  .gitmodules  CMakeLists.txt
EpiLib/EpiAdapterQt/: CMakeLists.txt
EpiLib/EpiAdapterQt/EpiAdapterQt/: QtEpiPropertyBrowser.cpp  QtEpiPropertyBrowser.h  QtEpiPropertyManager.cpp  QtEpiPropertyManager.h  QtObjectDelegate.cpp  QtObjectDelegate.h  QtObjectModel.cpp  QtObjectModel.h  QtObjectModelItem.cpp  QtObjectModelItem.h  pch.cpp
EpiLib/EpiAdapterwxWidgets/: CMakeLists.txt
EpiLib/EpiAdapterwxWidgets/EpiAdapterwxWidgets/: EpiObjectView.cpp  EpiObjectView.h  epiWXPlot.cpp  epiWXPlot.h  epiWXPropertyGrid.cpp  epiWXPropertyGrid.h  pch.cpp
EpiLib/EpiBlueprint/: CMakeLists.txt
EpiLib/EpiBlueprint/Sources/EpiBlueprint/: bpBlueprint.cpp  bpBlueprint.epi  bpBlueprint.h
EpiLib/EpiCore/: CMakeLists.txt  PropertyPointerDemo.cpp
EpiLib/EpiCore/EpiCore/: Clock.cpp  Clock.h  Color.cpp  Color.epi  Color.h  Expression.cpp  Expression.h  Hash.cpp  Hash.h  PCHCore.cpp  Pool.h  Rect.h  RotatingBuffer.h  Singleton.h  common.h  env.h  epi_config.h.in  pch.cpp  pch.h  types.h
EpiLib/EpiCore/EpiCore/Containers/: Array.h  HashMap.h
EpiLib/EpiCore/EpiCore/Debug/: FiniteFloating.h
EpiLib/EpiCore/EpiCore/ObjectModel/: ClassRegistry.cpp  ClassRegistry.h  EmitMeta.h  Handle.h  MetaObject.cpp  MetaObject.h  Object.cpp  Object.h  PropertyPath.cpp  PropertyPath.h  PropertyPointer.cpp  PropertyPointer.h  Serialization.h
EpiLib/EpiCore/EpiCore/Platform/: DisplayDevice.cpp  DisplayDevice.epi  DisplayDevice.h
EpiLib/EpiCore/Sources/EpiCore/: Clock.cpp  Color.cpp  Color.epi  Color.h  Expression.cpp  Hash.cpp  Hash.h  Pool.h  Rect.h  common.cpp  common.h  epiBuildInfo.cpp  epiBuildInfo.epi  epiBuildInfo.h  epi_config.h.in  types.h
EpiLib/EpiCore/Tests/: PropertyPointer-tests.cpp
EpiLib/EpiCore/Tests/TestsColor/: Color-tests.cpp
EpiLib/EpiCore/Tests/TestsPropertyPointer/: PropertyPointer-tests.cpp  TestClass.cpp  TestClass.epi  TestClass.h  TestClassA.cpp  TestClassA.epi  TestClassA.h  TestClassB.cpp  TestClassB.epi  TestClassB.h  TestClassC.cpp  TestClassC.epi  TestClassC.h  TestClassD.cpp  TestClassD.epi  TestClassD.h
EpiLib/EpiData/: CMakeLists.txt
EpiLib/EpiData/Sources/EpiData/: dCollection.cpp  dCollection.epi  dCollection.h
EpiLib/EpiData/Tests/TestsSeries/: FourierTransform-tests.cpp  Series-tests.cpp  Series1D-tests.cpp  Series2D-tests.cpp
EpiLib/EpiDataVisualization/: CMakeLists.txt
EpiLib/EpiDataVisualization/EpiDataVisualization/: DataCollection.cpp  DataCollection.epi  DataCollection.h  DrawerPlotBase.cpp  DrawerPlotBase.epi  DrawerPlotBase.h  DrawerPlotLine.cpp  DrawerPlotLine.epi  DrawerPlotLine.h  PlotBase.cpp  PlotBase.epi  PlotBase.h  PlotLine.cpp  PlotLine.h  SeriesXY.cpp  SeriesXY.epi  SeriesXY.h  SeriesY.cpp  SeriesY.epi  SeriesY.h  pch.cpp
EpiLib/EpiDataVisualization/EpiDataVisualization/Data/: DataCollection.cpp  DataCollection.epi  DataCollection.h  dvDataCollection.cpp  dvDataCollection.epi  dvDataCollection.h
EpiLib/EpiDataVisualization/EpiDataVisualization/Drawer/: DrawerPlotBase.cpp  DrawerPlotBase.epi  DrawerPlotBase.h  DrawerPlotLine.cpp  DrawerPlotLine.h  dvDrawerPlot.cpp  dvDrawerPlot.epi  dvDrawerPlot.h  dvDrawerPlotBase.cpp  dvDrawerPlotBase.epi  dvDrawerPlotBase.h  dvDrawerPlotDrawArea.cpp  dvDrawerPlotDrawArea.epi  dvDrawerPlotDrawArea.h  dvDrawerPlotLine.cpp  dvDrawerPlotLine.epi  dvDrawerPlotLine.h  dvDrawerPlotRealtime.cpp  dvDrawerPlotRealtime.epi  dvDrawerPlotRealtime.h  dvDrawerPlotTimeline.cpp  dvDrawerPlotTimeline.h  dvDrawerSeriesBase.cpp  dvDrawerSeriesBase.h  dvDrawerSeriesY.cpp  dvDrawerSeriesY.epi  dvDrawerSeriesY.h
EpiLib/EpiDataVisualization/EpiDataVisualization/Plot/: PlotBase.cpp  PlotBase.h  PlotLine.cpp  PlotLine.epi  PlotLine.h  dvPlot.cpp  dvPlot.h  dvPlotBase.cpp  dvPlotBase.epi  dvPlotBase.h  dvPlotLine.cpp  dvPlotLine.epi  dvPlotLine.h
EpiLib/EpiDataVisualization/EpiDataVisualization/View/: dvViewPlot.cpp  dvViewPlot.epi  dvViewPlot.h  dvViewPlotBase.cpp  dvViewPlotBase.epi  dvViewPlotBase.h  dvViewPlotDrawArea.cpp  dvViewPlotDrawArea.epi  dvViewPlotDrawArea.h  dvViewPlotRealtime.cpp  dvViewPlotRealtime.epi  dvViewPlotRealtime.h  dvViewPlotTimeline.cpp  dvViewPlotTimeline.epi  dvViewPlotTimeline.h
EpiLib/EpiDataVisualization/EpiDataVisualization/ViewModel/: dvViewModelPlot.cpp  dvViewModelPlot.epi  dvViewModelPlot.h  dvViewModelPlotBase.cpp  dvViewModelPlotBase.epi  dvViewModelPlotBase.h  dvViewModelSeriesBase.cpp  dvViewModelSeriesBase.epi  (+1 more)
EpiLib/EpiDrawer/: CMakeLists.txt
EpiLib/EpiGraphics/: CMakeLists.txt  uml.drawio
EpiLib/EpiGraphics/EpiGraphics/: CMakeLists.txt  Drawer.cpp  Drawer.epi  Drawer.h  gfxBindable.cpp  gfxBindable.epi  gfxBindable.h  gfxContext.cpp  gfxContext.epi  gfxContext.h  gfxDrawer.cpp  gfxDrawer.epi  gfxDrawer.h  gfxDrawerPrimitive.cpp  gfxDrawerPrimitive.h  gfxDrawerText.cpp  gfxDrawerText.h  gfxShaderProgram.cpp  gfxShaderProgram.epi  gfxShaderProgram.h  gfxTexture.cpp  gfxTexture.epi  gfxTexture.h  gfxVertexArray.cpp  gfxVertexArray.epi  gfxVertexArray.h  gfxVertexBuffer.cpp  gfxVertexBuffer.epi  gfxVertexBuffer.h  pch.cpp  pch.h
EpiLib/EpiGraphics/EpiGraphicsDriver/: CMakeLists.txt
EpiLib/EpiGraphics/EpiGraphicsEnum/: CMakeLists.txt
EpiLib/EpiGraphics/EpiGraphicsImpl/: CMakeLists.txt
EpiLib/EpiGraphics/EpiGraphicsImplVK/: CMakeLists.txt
EpiLib/EpiMultiMedia/: CMakeLists.txt
EpiLib/EpiMultiMedia/EpiMultiMedia/: pch.h  test.cpp
EpiLib/EpiSignalProcessing/: CMakeLists.txt
EpiLib/EpiTests/: CMakeLists.txt
EpiLib/EpiUI/: CMakeLists.txt
EpiLib/EpiUI/EpiUI/: pch.cpp  uiAction.cpp  uiAction.epi  uiAction.h  uiCamera.cpp  uiCamera.h  uiContext.cpp  uiContext.epi  uiContext.h  uiLayout.cpp  uiLayout.epi  uiLayout.h  uiLayoutVBox.cpp  uiLayoutVBox.epi  uiLayoutVBox.h  uiPage.cpp  uiPage.epi  uiPage.h  uiViewModel.cpp  uiViewModel.h  uiWidget.cpp  uiWidget.epi  uiWidget.h
EpiLib/EpiwxWidgets/: CMakeLists.txt
EpiLib/EpiwxWidgets/EpiwxWidgets/: epiWXPlot.cpp  epiWXPropertyGrid.cpp  epiWXPropertyGrid.h  pch.cpp
EpiLib/EpiwxWidgets/Examples/: CMakeLists.txt
(+963 files in other folders)
