project(EpiLib)

add_subdirectory(EpiLib/EpiTests)
add_subdirectory(EpiLib/EpiCore)
add_subdirectory(EpiLib/EpiData)
add_subdirectory(EpiLib/EpiGraphics)
add_subdirectory(EpiLib/EpiUI)
add_subdirectory(EpiLib/EpiDataVisualization)
add_subdirectory(EpiLib/EpiwxWidgets)
add_subdirectory(EpiLib/EpiMultimedia)
add_subdirectory(EpiLib/EpiBlueprint)
